[package]
name = "tls-test"
version = "0.1.0"
authors = ["king6cong <king6cong@gmail.com>"]

[dependencies]
tokio-core = "0.1.6"

# This should build without problems
# hyper = { git = "https://github.com/hyperium/hyper" }
# hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }

# But these will result error:
# ```
#  .connector(::hyper_tls::HttpsConnector::new(4, &core.handle()))
#  ^^^^^^^^^ expected struct `hyper::uri::Uri`, found struct `hyper::Uri`
# ```

hyper = { git = "https://github.com/hyperium/hyper", rev = "3da720a99fab9cf6ecf8a206bb22c826ebb74992" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls", rev = "74aefbe500df5bb2d9a87844580b4ac21d49f134" }
